--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -224,6 +224,29 @@ QT_LOGGING_RULES='*=false;sync.httplogger=true' \
   --logdebug --logfile <file>
 ----
 
+=== Installer Log files
+
+==== Windows Installer Logging
+
+In case you experience issues, you can run the installer with logging enabled:
+
+[source,console,subs="attributes+"]
+----
+msiexec /i ownCloud-{client-version-win}.msi /L*V "C:\log\example.log"
+----
+
+See the: https://www.advancedinstaller.com/user-guide/qa-log.html[How do I create an installation log] documentation for more information about the Msiexec.exe command and logging.
+
+==== macOS Installer Logging
+
+The macOS installer brings it's own Log console. Just run the *.PKG as usual At the first install screen in the menu bar click Window --> Installer Log (Command + L)
+
+[width=100%,cols="50%,50%"]
+|===
+a| image::appendices/troubleshooting/log-install-macos1.png[macOS Installer Enable Logging,width=250]
+a| image::appendices/troubleshooting/log-install-macos2.png[macOS Installer Log View,width=450]
+|===
+
 === ownCloud Server Log File
 
 The ownCloud server also maintains an ownCloud specific log file. This log file must be enabled through the ownCloud Administration page. On that page, you can adjust the log level. We recommend that when setting the log file level that you set it to a verbose level like `Debug` or `Info`.
