--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -224,7 +224,7 @@ QT_LOGGING_RULES='*=false;sync.httplogger=true' \
   --logdebug --logfile <file>
 ----
 
-=== Installer Log files
+=== Installer Log Files
 
 ==== Windows Installer Logging
 
@@ -235,11 +235,11 @@ In case you experience issues, you can run the installer with logging enabled:
 msiexec /i ownCloud-{client-version-win}.msi /L*V "C:\log\example.log"
 ----
 
-See the: https://www.advancedinstaller.com/user-guide/qa-log.html[How do I create an installation log] documentation for more information about the Msiexec.exe command and logging.
+See the: https://www.advancedinstaller.com/user-guide/qa-log.html[How do I create an installation log] documentation for more information about the msiexec.exe command and logging.
 
 ==== macOS Installer Logging
 
-The macOS installer brings it's own Log console. Just run the *.PKG as usual At the first install screen in the menu bar click Window --> Installer Log (Command + L)
+The macOS installer brings its own log console. Just run the *.PKG as usual. At the first install screen in the menu bar, click Window --> Installer Log (Command + L).
 
 [width=100%,cols="50%,50%"]
 |===
