--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -42,19 +42,19 @@ You can download the latest version of the ownCloud Desktop App from the {deskto
 Depending on the operating system used, some minimum system requirements need to be met. ownCloud provides Linux packages for a variety of Linux distributions, see the list of supported distros below.
 
 Windows::
-* Windows 8 or later (x64)
+* Windows 10 or later (x64)
 ** When using external drives storing the synchronization data, it is highly recommended to format these drives with NTFS and not with FAT. This is because the FAT filesystem has many limitations which can cause unexpected or unwanted behavior.
 ** For xref:vfs.adoc[VFS support], Windows 10 versions 1709 or later. When using external drives, NTFS is required.
 
 macOS::
-* macOS 10.13+
+* macOS 10.15+
 ** x86-64 or ARM64 (Apple Silicon)
 
 Linux::
 * Debian 11 & 12 (x86-64)
-* Fedora 36 & 37 & 38 (x86-64)
-* openSUSE Leap 15.4 (x86-64)
-* Ubuntu 22.04 & 22.10 & 23.04 (x86-64)
+* Fedora 37 & 38 (x86-64)
+* openSUSE Leap 15.4 & 15.5 (x86-64)
+* Ubuntu 22.04 & 23.04 (x86-64)
 * **{appimage-wikipedia-url}[AppImage]** build of the ownCloud Desktop App is available to support more Linux platforms
 
 NOTE: For Linux distributions, we support, if technically feasible, the latest 2 versions per platform and the previous Ubuntu {ubuntu-lts-url}[LTS].
