--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -1,8 +1,8 @@
 = Installing the Desktop App
 :toc: right
 :toclevels: 4
-:client-version-win: 4.1.0.11250.x64
-:client-version-appimage: 4.1.0.11250-x86_64
+:client-version-win: 5.1.0.12434-rc.1.x64
+:client-version-appimage: 5.1.0.12434-rc.1-x86_64
 :description: The Desktop App enables users to access and sync files and folders from their ownCloud, work on remote files right from the desktop as if they were stored on their computer – because they are.
 
 :ms-remove-url: https://docs.microsoft.com/en-us/windows/win32/msi/remove
@@ -52,9 +52,9 @@ macOS::
 
 Linux::
 * Debian 11 & 12 (x86-64)
-* Fedora 37 & 38 (x86-64)
+* Fedora 38 & 39 (x86-64)
 * openSUSE Leap 15.4 & 15.5 (x86-64)
-* Ubuntu 22.04 & 23.04 (x86-64)
+* Ubuntu 22.04 & 23.04 & 23.10 (x86-64)
 * **{appimage-wikipedia-url}[AppImage]** build of the ownCloud Desktop App is available to support more Linux platforms
 
 NOTE: For Linux distributions, we support, if technically feasible, the latest 2 versions per platform and the previous Ubuntu {ubuntu-lts-url}[LTS].
