--- a/modules/ROOT/pages/appendices/release_notes.adoc
+++ b/modules/ROOT/pages/appendices/release_notes.adoc
@@ -77,8 +77,9 @@ Please make sure that you meet the following requirements before updating to the
 *	Ubuntu 22.04 LTS
 *	Ubuntu 23.04
 *	Ubuntu 23.10
+* AppImage builds for other Linux distributions. 
 
-AppImage builds for other Linux distributions Here you can find the full requirements page.
+https://doc.owncloud.com/desktop/5.2/installing.html#system-requirements[Here] you can find the full requirements page.
 
 === Newly supported platforms
 
